Add needed events to definition

--- a/openHPI2.yml
+++ b/openHPI2.yml
@@ -21,6 +21,8 @@ events:
             - xp: XP
               amount: 20
     VideoClicked: ~
+    SelfAssigmentStarted: ~
+    SelfTestStarted: ~
         
 
 achievements:
