--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@feathersjs/feathers": "^3.1.5",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
+    "feathers-mongoose": "^6.1.1",
     "helmet": "^3.12.1",
+    "mongoose": "^5.1.3",
     "serve-favicon": "^2.5.0",
     "winston": "^2.4.2"
   },
