--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.4",
     "feathers-mongoose": "^6.1.1",
     "helmet": "^3.12.1",
+    "js-yaml": "^3.11.0",
     "mongoose": "^5.1.3",
     "serve-favicon": "^2.5.0",
     "winston": "^2.4.2"
