Add start script for windows

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "npm run eslint && npm run mocha",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "start": "node $NODE_DEBUG_OPTION src/",
+    "start-windows": "node %NODE_DEBUG_OPTION% src/",
     "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
