create achievement action hooks
Co-authored-by: corinnaj <corinna.jaschek@gmail.com>

--- a/config/gamification.yml
+++ b/config/gamification.yml
@@ -30,6 +30,9 @@ achievements:
         requirements:
             - xp: postXP
               amount: 2
+        actions:
+            - xp: XP
+              amount: 23
 
     CommunicatorSilver:
         requirements:
