requirement extenstion of eventRequirements
Co-Authored-By: Fred <Frederike.Ramin@student.hpi.de>
Co-AUthored-By: Christian <cmfcmf.flach@gmail.com>

--- a/docs/yaml_general.yml
+++ b/docs/yaml_general.yml
@@ -16,6 +16,7 @@ achievements:
         # TODO add anyof / oneof in this level
             # implicit AND semantic
             - achievement: YourOtherAchievement
+              amount: 1
             - xp: yourXP
               amount: >= 10
             - event:
