Use recommended NPM configuration
The configuration is taken from here: https://docs.npmjs.com/cli/ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ node_js:
 
 cache:
   directories:
-    - "node_modules"
+    - "$HOME/.npm"
+
+install:
+  - npm ci
 
 before_install:
   - npm i -g npm@6.1.0
