write more tests

--- a/test/config/achievement-rule-checker-config.yml
+++ b/test/config/achievement-rule-checker-config.yml
@@ -1,13 +1,47 @@
-XPS: []
+XPS:
+    - secondXPType
 
 events:
     EventGiving10XP:
         actions:
             - xp: XP
               amount: 10 
+    EventGiving2XPTypes:
+        actions:
+            - xp: XP
+              amount: 10
+            - xp: secondXPType
+              amount: 10
+    EventGrantingAchievement: ~
 
 achievements:
     10XPAchievement:
         requirements:
             - xp: XP
               amount: 10
+    AchievementRequiring2XPTypes:
+        requirements:
+            - xp: XP
+              amount: 10
+            - xp: secondXPType
+              amount: 10
+    AchievementBeingRequired:
+        requirements:
+            - xp: XP
+              amount: 10
+    AchievementRequiringOtherAchievement:
+        requirements:
+            - achievement: AchievementBeingRequired
+    AchievementRequiringEvent:
+        requirements:
+            - event:
+                name: EventGrantingAchievement
+                amount: 1
+    AnyOfAchievement:
+        requirements:
+            - AnyOf:
+                - xp: XP
+                  amount: 10
+                - xp: secondXPType
+                  amount: 10
+
