let travis run tests and coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,4 @@ before_install:
   - npm i -g npm@6.1.0
 
 script:
-  # TODO: Change this to "npm test" once our tests are no longer failing.
-  #       "npm test" includes running eslint.
-  - npm run eslint
+  - npm run test
