--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "debug-linux": "node $NODE_DEBUG_OPTION src/",
     "debug-windows": "node %NODE_DEBUG_OPTION% src/",
     "mocha": "cross-env NODE_ENV=test mocha test/ --recursive --exit",
-    "coverage": "cross-env NODE_ENV=test istanbul cover node_modules/mocha/bin/_mocha -- test/ --recursive --exit"
+    "coverage": "cross-env NODE_ENV=test nyc mocha test/ --recursive --exit"
   },
   "dependencies": {
     "@feathersjs/configuration": "^1.0.2",
@@ -49,6 +49,7 @@
     "eslint": "^4.19.1",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
   }
