--- a/test/config/achievement-rule-checker-config.yml
+++ b/test/config/achievement-rule-checker-config.yml
@@ -52,3 +52,8 @@ achievements:
         requirements:
             - xp: XP
               amount: 10
+    AchievementCanBeAwadedTwice:
+        requirements:
+            - xp: XP
+              amount: 10
+        maxAwarded: 2
