--- a/config/gamification.yml
+++ b/config/gamification.yml
@@ -35,7 +35,7 @@ achievements:
                   - AnyOf:
                       - parameter: Kim
                         value: gross
-                      - OneOf:
+                      - AnyOf:
                           - parameter: Frede
                             value: schoen
                           - parameter: Kim
