--- a/test/config/achievement-rule-checker-config.yml
+++ b/test/config/achievement-rule-checker-config.yml
@@ -5,7 +5,7 @@ events:
     EventGiving10XP:
         actions:
             - xp: XP
-              amount: 10 
+              amount: 10
     EventGiving2XPTypes:
         actions:
             - xp: XP
@@ -13,8 +13,15 @@ events:
             - xp: secondXPType
               amount: 10
     EventGrantingAchievement: ~
+    ScopeEvent: ~
 
 achievements:
+    ScopeAchievement:
+        requirements:
+            - event:
+                name: ScopeEvent
+                amount: 1
+        scope: [user_id, context:course_id]
     10XPAchievement:
         requirements:
             - xp: XP
