Gracefully handle non-existing context properties
Co-Authored-By: Frederike Ramin <frederike.ramin@student.hpi.de>

--- a/test/config/achievement-rule-checker-config.yml
+++ b/test/config/achievement-rule-checker-config.yml
@@ -22,6 +22,13 @@ achievements:
                 name: ScopeEvent
                 amount: 1
         scope: [user_id, context:course_id]
+    GlobalAchievement:
+        requirements:
+            - event:
+                name: ScopeEvent
+                amount: 1
+        scope: []
+        maxAwarded: 2
     10XPAchievement:
         requirements:
             - xp: XP
