--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "winston": "^2.4.2"
   },
   "devDependencies": {
+    "coveralls": "^3.0.1",
     "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "istanbul": "^0.4.5",
