--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
     "unicode-bom": "error",
     "brace-style": "error",
     "func-call-spacing": ["error", "never"],
-    "prefer-arrow-callback": "error"
+    "prefer-arrow-callback": "error",
+    "no-trailing-spaces": "error",
+    "comma-dangle": ["error", "never"]
   }
 }
