--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,6 +2,7 @@ FROM node:10.4.1
 
 COPY . /app
 WORKDIR /app
+RUN npm install -g nodemon
 RUN npm install
 EXPOSE 3030
-CMD ["npm","start"]
+CMD ["nodemon","npm start"]
