--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,11 @@ services:
       - rabbitmq_data:/var/lib/rabbitmq/mnesia/rabbit@my-rabbit
       - ./config/rabbitmq:/etc/rabbitmq
   app:
-    build: 
-      context: .
-      dockerfile: Dockerfile.dev
+    build: .
     image: gamification
     volumes:
       - ./:/app
-    command: nodemon npm start
+    command: npm start
     ports:
       - "3030:3030"
     links:
