move RabbitMQ stuff to development-specific folder as it is not needed in production

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - rabbitmq_log:/var/log/rabbitmq
       - rabbitmq_data:/var/lib/rabbitmq/mnesia/rabbit@my-rabbit
-      - ./config/rabbitmq:/etc/rabbitmq
+      - ./dev/rabbitmq-config:/etc/rabbitmq
   app:
     build: 
       context: .
