--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^4.19.1",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "nodemon": "^1.17.5",
     "nyc": "^12.0.2",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
