--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "debug-linux": "node $NODE_DEBUG_OPTION src/",
     "debug-windows": "node %NODE_DEBUG_OPTION% src/",
     "mocha": "cross-env NODE_ENV=test mocha test/ --recursive --exit --timeout 5000",
-    "coverage": "cross-env NODE_ENV=test nyc mocha test/ --recursive --exit --timeout 5000"
+    "coverage": "cross-env NODE_ENV=test nyc mocha test/ --recursive --exit --timeout 5000",
+    "dev": "./node_modules/nodemon/bin/nodemon.js npm start"
   },
   "dependencies": {
     "@feathersjs/configuration": "^1.0.2",
