--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "coverage": "cross-env NODE_ENV=test nyc mocha test/ --recursive --exit --timeout 5000",
     "dev": "./node_modules/nodemon/bin/nodemon.js npm start"
   },
+  "nodemonConfig": {
+    "ignore": ["test/*", "docs/*"]
+  },
   "dependencies": {
     "@feathersjs/configuration": "^1.0.2",
     "@feathersjs/errors": "^3.3.0",
