--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,18 @@ services:
     image: mongo:3.6.5
     volumes:
       - mongo-data:/data/db
-    ports:
-      - "27017:27017"
+    expose:
+      - 27017
   app:
     build: .
     image: gamification
-    volumes:
-      - ./:/app
-    command: npm start
     ports:
       - "3030:3030"
-    links:
-      - mongo
     depends_on:
       - mongo
     environment:
       - MONGO_URL=mongodb://mongo/gamification
-      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_HOST
 volumes:
   mongo-data:
   rabbitmq_log:
