use separate gamification:dev tagged image for development

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,7 +20,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.dev
-    image: gamification
+    image: gamification:dev
     volumes:
       - ./:/app
     command: ./node_modules/nodemon/bin/nodemon.js npm start
