--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,6 @@
     "func-call-spacing": ["error", "never"],
     "prefer-arrow-callback": "error",
     "no-trailing-spaces": "error",
-    "comma-dangle": ["error", "never"],
-    "no-console": "off"
+    "comma-dangle": ["error", "never"]
   }
 }
