--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,6 @@ services:
       - MONGO_URL=mongodb://mongo/gamification
       - RABBITMQ_HOST
     volumes:
-      - config:/app/config
+      - ./config:/app/config
 volumes:
   mongo-data:
