--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,7 +22,7 @@ services:
       dockerfile: Dockerfile.dev
     image: gamification:dev
     volumes:
-      - ./config:/app
+      - ./config:/app/config
     ports:
       - "3030:3030"
     depends_on:
@@ -31,7 +31,6 @@ services:
     environment:
       - MONGO_URL=mongodb://mongo/gamification
       - RABBITMQ_HOST=rabbitmq
-    volumes:
 volumes:
   mongo-data:
   rabbitmq_log:
