add extra config file for schul-cloud instead of  overwriting the original one

--- a/config/gamification.yml
+++ b/config/gamification.yml
@@ -1,27 +1,125 @@
+# define context fields?
+
 XPs:
+    # XP is predefined
+    - postXP
 
 events:
-  HomeworkSubmitted:
-    actions:
-      - xp: XP
-        amount: 5
+    ForumPost:
+        actions:
+            - xp: postXP
+              amount: 1
+            - xp: XP
+              amount: 10
+    QuestionAsked:
+        actions:
+            - xp: XP
+              amount: 2
+    VoluntarySelfTestTaken: ~
+    CourseCompleted:
+        actions:
+            - xp: XP
+              amount: 20
+    VideoClicked: ~
+    SelfAssigmentStarted: ~
+    SelfTestStarted: ~
+    X: ~
+
 
 achievements:
-  FirstHomeworkSubmission:
-    requirements:
-      - event:
-          name: HomeworkSubmitted
-          amount: 1
-    actions:
-      - xp: XP
-        amount: 10
-    scope: [user, context.assignment_id]
-  FiveHomeworkSubmissions:
-    requirements:
-      - event:
-          name: HomeworkSubmitted
-          amount: 5
-    actions:
-      - xp: XP
-        amount: 10
-    scope: [user, context.assignment_id]
+    AnyOfEventAchievement:
+        requirements:
+            - event:
+                name: X
+                conditions:
+                  - AnyOf:
+                      - parameter: Kim
+                        value: gross
+                      - AnyOf:
+                          - parameter: Frede
+                            value: schoen
+                          - parameter: Kim
+                            value: hobbit
+
+    CommunicatorBronze:
+        requirements:
+            - xp: postXP
+              amount: 2
+        actions:
+            - xp: XP
+              amount: 23
+        hidden: true
+
+    CommunicatorSilver:
+        requirements:
+            - achievement: CommunicatorBronze
+            - xp: postXP
+              amount: ">= 5"
+        replaces: [CommunicatorBronze]
+
+    ComCom:
+        requirements:
+            - event:
+                name: ForumPost
+                amount: ">= 10"
+
+    VoluntarySelfTestTakenAward:
+        requirements:
+            - event:
+                name: VoluntarySelfTestTaken
+                conditions:
+                    - parameter: completion_percentage
+                      value: 100
+        # maxAwarded is implicitly 1
+        # maxAwarded: 1
+        # could be e.g. per user and course, could be renamed to "per"
+        scope: [user]
+        actions:
+            - xp: XP
+              amount: 2
+
+    JavaPro:
+        requirements:
+            - event:
+                name: CourseCompleted
+                amount: 5
+                conditions:
+                    - parameter: tags
+                      value: java
+        scope: [user]
+
+    # achievement per comleted course
+    CourseCompletedAward:
+        requirements:
+            - event:
+                name: CourseCompleted
+        scope: [user, context.course_id]
+
+    ContinousAttendance:
+        requirements:
+        # VideoClicked AND (SelfTestStarted OR SelfAssigmentStarted)
+            - event:
+                name: VideoClicked
+                conditions:
+                    - parameter: watched_videos_of_week_percentage
+                      value: ">= 70"
+            - AnyOf:
+                - event:
+                    name: SelfTestStarted
+                - event:
+                    name: SelfAssigmentStarted
+        hidden: true
+        scope: [user, context.course_id, context.course_week]
+        actions:
+            - xp: XP
+              amount: 10
+              requirements:
+                - achievement:
+                    name: ContinousAttendance
+                    conditions:
+                        - parameter: context.user_id
+                          value: user_id
+                        - parameter: context.course_week
+                          value: course_week -1
+                        - parameter: context.course_id
+                          value: course_id
