--- a/test/config/achievement-rule-checker-config.yml
+++ b/test/config/achievement-rule-checker-config.yml
@@ -4,14 +4,17 @@ XPS:
 events:
     EventGiving10XP:
         actions:
-            - xp: XP
-              amount: 10
+            - xp:
+                name: XP
+                amount: 10
     EventGiving2XPTypes:
         actions:
-            - xp: XP
-              amount: 10
-            - xp: secondXPType
-              amount: 10
+            - xp:
+                name: XP
+                amount: 10
+            - xp:
+                name: secondXPType
+                amount: 10
     EventGrantingAchievement: ~
 
 achievements:
@@ -21,18 +24,22 @@ achievements:
             name: 10XPAchievement
     10XPAchievement:
         requirements:
-            - xp: XP
-              amount: 10
+            - xp:
+                name: XP
+                amount: 10
     AchievementRequiring2XPTypes:
         requirements:
-            - xp: XP
-              amount: 10
-            - xp: secondXPType
-              amount: 10
+            - xp:
+                name: XP
+                amount: 10
+            - xp:
+                name: secondXPType
+                amount: 10
     AchievementBeingRequired:
         requirements:
-            - xp: XP
-              amount: 10
+            - xp:
+                name: XP
+                amount: 10
     AchievementRequiringOtherAchievement:
         requirements:
             - achievement:
@@ -44,23 +51,28 @@ achievements:
     AnyOfAchievement:
         requirements:
             - AnyOf:
-                - xp: XP
-                  amount: 10
-                - xp: secondXPType
-                  amount: 10
+                - xp:
+                    name: XP
+                    amount: 10
+                - xp:
+                    name: secondXPType
+                    amount: 10
     AchievementReplacingOther:
         requirements:
-            - xp: XP
-              amount: 20
+            - xp:
+                name: XP
+                amount: 20
         replaces: [AchievementBeingReplaced]
     AchievementBeingReplaced:
         requirements:
-            - xp: XP
-              amount: 10
+            - xp:
+                name: XP
+                amount: 10
     AchievementCanBeAwardedTwiceAtOnce:
         requirements:
-            - xp: XP
-              amount: 10
+            - xp:
+                name: XP
+                amount: 10
         maxAwarded: 2
     AchievementCanBeAwardedTwice:
             requirements:
