--- a/test/config/after-achievement-module-config.yml
+++ b/test/config/after-achievement-module-config.yml
@@ -4,14 +4,17 @@ XPS:
 events:
     EventGiving10XP:
         actions:
-            - xp: XP
-              amount: 10 
+            - xp:
+                name: XP
+                amount: 10
 
 achievements:
     AchievementGiving10XP:
         requirements:
-            - xp: XP
-              amount: 10
+            - xp:
+                name: XP
+                amount: 10
         actions:
-            - xp: achievementActionXP 
-              amount: 1
+            - xp:
+                name: achievementActionXP
+                amount: 1
