--- a/test/config/user_config.yml
+++ b/test/config/user_config.yml
@@ -6,11 +6,13 @@ achievements:
     TestAchievement:
         #add this so rule parsing works
         requirements:
-            - xp: XP
-              amount: 0
+            - xp:
+                name: XP
+                amount: 0
     HiddenAchievement:
         #add this so rule parsing works
         requirements:
-            - xp: XP
-              amount: 0
+            - xp:
+                name: XP
+                amount: 0
         hidden: true
