--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     "func-call-spacing": ["error", "never"],
     "prefer-arrow-callback": "error",
     "no-trailing-spaces": "error",
-    "comma-dangle": ["error", "never"]
+    "comma-dangle": ["error", "never"],
+    "prefer-const": "error"
   }
 }
